# Astra.dev

./: Dockerfile  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
