[project]
name = "dependency-hell"
version = "1.0.0"
description = "Dependency Hell - OpenEnv CI/CD Debugging Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.4.2",
    "openai>=2.7.2",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"